--- a/trabalhos/trabalhos.html
+++ b/trabalhos/trabalhos.html
@@ -60,6 +60,8 @@
             <a href="../contato/contato.html"><p class="menu-item">Contato</p></a>
         </div>-->
         
+        <div id="menu-slide"></div>
+        
         <div class="foto-zoom"></div>
         <div class="foto-zoom-large"></div>
     </div>
