--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
                 
                 <ul class="navbar-nav" style="margin-right:2vw;text-align:right">
                     <li class="nav-item menu-item"><a href="" id="home-button">Início</a></li>
-                    <li class="nav-item menu-item"><a href="trabalhos/trabalhos.html" id="trabalhos-button">Trabalhos</a></li>
+                    <li class="nav-item menu-item"><a href="trabalhos/trabalhos.html" id="fotografia-button">Fotografia</a></li>
+                    <li class="nav-item menu-item"><a href="audiovisual/audiovisual.html" id="audiovisual-button">Audiovisual</a></li>
                     <li class="nav-item menu-item"><a href="contato/contato.html" id="info-button">Contato</a></li>
                 </ul>
             
