--- a/trabalhos/trabalhos.html
+++ b/trabalhos/trabalhos.html
@@ -55,7 +55,8 @@
         <div id="menu" class="row">
             <div id="menu-content">
                 <a href="../index.html"><span>Inicio</span></a>
-                <a href="trabalhos.html"><span>Trabalhos</span></a>
+                <a href=""><span>Fotografia</span></a>
+                <a href="../audiovisual/audiovisual.html"><span>Audiovisual</span></a>
                 <a href="../contato/contato.html"><span>Contato</span></a>
             </div>
             <div id="burger">
