--- a/contato/contato.html
+++ b/contato/contato.html
@@ -66,7 +66,8 @@
                 
                 <ul class="navbar-nav pull-right" style="margin-right:2vw;text-align:right">
                     <li class="nav-item menu-item"><a href="../index.html" id="home-button">Início</a></li>
-                    <li class="nav-item menu-item"><a href="../trabalhos/trabalhos.html" id="trabalhos-button">Trabalhos</a></li>
+                    <li class="nav-item menu-item"><a href="../trabalhos/trabalhos.html" id="fotografia-button">Fotografia</a></li>
+                    <li class="nav-item menu-item"><a href="../audiovisual/audiovisual.html" id="audiovisual-button">Audiovisual</a></li>
                     <li class="nav-item menu-item"><a href="" id="info-button">Contato</a></li>
                 </ul>
             
