--- a/audiovisual/audiovisual.html
+++ b/audiovisual/audiovisual.html
@@ -110,7 +110,7 @@
             <div class="card-image" style="background-image:url(teoria1.png)"></div>
             <div class="card-image" style="background-image:url(teoria2.png)"></div>
             <p style="font-weight:700">Teoria Funcionalista da Comunicação</p>
-            <p>Vídeo para Youtube, produzido durante o primeiro semestre de Radialismo<br>Concepção e montagem<br>Mais de 29 mil vizualizações<br>2012</p>
+            <p>Vídeo para Youtube, produzido durante o primeiro semestre de Radialismo<br>Concepção e montagem<br>Mais de 29 mil visualizações<br>2012</p>
             <a href="https://www.youtube.com/watch?v=-klUvF3IMZI" target="_blank"><p style="font-weight:700">Assistir</p></a>
         </div>
     </div>
