--- a/contato/contato.html
+++ b/contato/contato.html
@@ -36,7 +36,7 @@
     <div id="loading-spinner"><i class="fa fa-circle-o-notch spinner"></i></div>
     
     <div class="contato">
-        <p class="contato-item" style="color:white">Letícia é formada em Rádio e TV pela UNESP e possui experiência nas áreas de fotografia, maquiagem e direção de arte.</p>
+        <p class="contato-item" style="color:white">Letícia é formada em Rádio e TV pela UNESP e possui experiência nas áreas de fotografia, edição, maquiagem e direção de arte.</p>
         <div style="margin-top:5vh">
             <a href="http://facebook.com/leticiaborba" target="_blank"><i class="fa fa-facebook fa-2x social-icon contato-item"></i></a>
             <a href="http://instagram.com/borbaleticia" target="_blank"><i class="fa fa-instagram fa-2x social-icon contato-item" ></i></a>
